# ACBrotherhoodEditor_OPTIONS

./: .gitignore  README.md  README_OPTIONS.md  REVERSE_ENGINEERING_TASK_PROMPT.md  acb_facebookcape_unlocker.py  acb_uplay_unlocker.py  cape_unlocker.md  cape_unlocker.py  cape_unlocker_ps3.py  compact_format_parser.py  lzss.py  lzss_OPTIONS.py  lzss_compressor_final.py  lzss_compressor_pc.py  lzss_decompressor_final.py  lzss_decompressor_pc.py  lzss_decompressor_ps3.py  options_pack.py  options_serializer.py  options_serializer_pc.py  options_serializer_ps3.py  sav_parser.py  sav_serializer.py
GameSave/: .gitignore  lzss_decompressor_final.py  sav_parser.py
GameSave/docs/: SAV_BLOCKS_OVERVIEW.md
GameSave/docs/data/: sav_descriptors_deep_analysis.json
GameSave/docs/data/table_ids/: table_ids_index.json  table_ids_shared.json  type_descriptors.json
GameSave/references/OPTIONS.OPTSAVTRACE/: OPTIONS.OPTSAVTRACE
GameSave/references/OPTIONS.WINDBGTRACE/: OPTIONS.WINDBGTRACE
docs/: ACB_Functions_Reference.md  ACB_OPTIONS_Footer_Complete_Specification.md  ACB_OPTIONS_Header_Complete_Specification.md  ACB_OPTIONS_Language_Struct_Analysis.md  ACB_OPTIONS_Mapping_Reference.md  ACB_OPTIONS_Menu_Mapping_Reference.md  BITFIELD_REFERENCE.md  CROSS_SECTION_RELATIONSHIPS.md  FUNCTION_CALL_TREE.md  HASH_RESOLUTION_TABLE.md  JSON_DATA_INDEX.md  LZSS_LOGIC_FLOW_ANALYSIS.md  OPTIONS_FIELD_REFERENCE.md  OPTIONS_FORMAT_SPECIFICATION.md  PHASE4_RESEARCH_REPORT.md  PS3_OPTIONS_FORMAT.md  PS3_vs_PC_STRUCTURE_ANALYSIS.md  README_SERIALIZER.md  SAV_BLOCKS_OVERVIEW.md  SAV_FILE_FORMAT_SPECIFICATION.md  SECTION_DATA_STRUCTURES.md  TYPE_SYSTEM_REFERENCE.md  VALUE_CONSTRAINTS.md  misc notes.txt
docs/blocks/: BLOCK1_SAVEGAME_STRUCTURE.md  BLOCK2_GAME_STATE_STRUCTURE.md  BLOCK4_INVENTORY_STRUCTURE.md  BLOCKS_3_5_COMPACT_FORMAT.md
docs/data/: cape_mappings.json  sav_hash_mapping.json  sav_property_tables_extracted.json  sav_type_descriptors_found.json
docs/data/table_ids/: table_ids_00-1F.json
docs_gamesave/blocks/: BLOCK1_SAVEGAME_STRUCTURE.md  BLOCK2_GAME_STATE_STRUCTURE.md
docs_gamesave/data/: type_hash_analysis.json
references/: ACBROTHERHOODSAVEGAME0.SAV  OPTIONS
serializer/acb-options-editor/: hashes.json  main.cpp
serializer/acb-options-editor/qml/: main.qml
serializer/acb-options-editor/tests/: CMakeLists.txt  test_checksum.cpp  test_load_file.cpp  test_roundtrip.cpp
serializer/archive/section1 serialization/: SECTION1_SERIALIZATION.md  section1_parser.py
serializer/archive/section4 serialization/: SECTION4_SERIALIZATION.md  section4_parser.py
tools/: options_json.py  options_unpack.py
tools/acb-options-editor/: CMakeLists.txt
tools/acb-options-editor/qml/components/: MenuBar.qml  StatusBar.qml
tools/acb-options-editor/qml/dialogs/: ExportDialog.qml
tools/acb-options-editor/src/: CMakeLists.txt
tools/acb-options-editor/src/core/: BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  BinaryWriter.h  HashLookup.cpp  LZSS.cpp  LZSS.h
tools/acb-options-editor/src/model/: Property.h  PropertyValue.cpp  PropertyValue.h  Section.cpp  Section1.h  Section2.cpp  Section2.h  Section3.cpp  Section4.cpp  Section4.h  SectionHeader.cpp  UnknownSection.cpp  UnknownSection.h
tools/acb-options-editor/src/util/: JsonExporter.h
tools/acb-options-editor/src/viewmodel/: OptionsFileModel.cpp  OptionsFileModel.h  PropertyTreeItem.cpp  PropertyTreeItem.h  SectionListModel.cpp  UndoCommands.cpp
tools/acb-options-editor/tests/: test_lzss.cpp
tools/archive/section2 serialization/: SECTION2_SERIALIZATION.md  section2_parser.py
tools/archive/section3 serialization/: README.md  section3_parser.py
(+36 files in other folders)
